layout for services is done - no css corrections have been completed

--- a/front-end/services/services.html
+++ b/front-end/services/services.html
@@ -224,10 +224,40 @@
       </div>
     </div>
   </div>
+</section>
 
+<section class="padding-2">
 
 </section>
 
+
+<section class="connect-section">
+  <div class="lisa-speciality" style="color: black">
+    Specializing in...
+  </br>
+   Balayage, Custom Colors, Color Correction
+ </br>
+ Color & Brazilian Blowouts.
+  </div>
+
+ <div class="description">
+
+   <h5>
+     <strong>
+       Book your appointment online
+     </strong>
+   </h5>
+ </div>
+</div>
+
+<div class="groups-buttons">
+  <button onclick="location.href='https://plus.google.com/u/0/collection/k7INaB'" class="btn btn-outline-dark" type="button">VIEW PHOTOS</button>
+  <button href="#" class="btn btn-outline-dark" onclick="location.href='https://directory.bookedin.com/lisa-holloway-hair-studio'">BOOK ONLINE</button>
+
+</div>
+
+
+</section>
 
 <section class="padding-footing">
 
