sunlight font uploaded in services title

--- a/front-end/services/services.html
+++ b/front-end/services/services.html
@@ -15,7 +15,7 @@
 
     <link rel="stylesheet" href="services.css">
 
-    <title>Hello, world!</title>
+    <title>Lisa Holloway Services</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-md navbar-dark bg-fade fixed-top">
@@ -42,7 +42,7 @@
 
       <section class="module parallax parallax-1" data-type="background" data-speed="10">
         <div class="parallax-container">
-          <h1 class="lisa-holloway-title">Lisa Holloway</h1>
+          <div class="lisa-holloway-title">Lisa Holloway</div>
         </div>
       </section>
 
