added spaces between services drop down accordian and all font is grey

--- a/front-end/services/services.html
+++ b/front-end/services/services.html
@@ -48,8 +48,8 @@
 
 
 
-<section class="hair-section">
-  <h2 class="hair-title">Hair Cut</h2>
+<section class="service-section">
+  <div class="section-title">HAIRCUT & CONDITIONING</div>
 
   <div class="accordion" id="accordionExample">
   <div class="card">
@@ -67,6 +67,10 @@
       </div>
     </div>
   </div>
+
+  <div class="service-spacing">
+  </div>
+
   <div class="card">
     <div class="card-header" id="headingTwo">
       <h5 class="mb-0">
@@ -80,6 +84,9 @@
         Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid.
       </div>
     </div>
+  </div>
+
+  <div class="service-spacing">
   </div>
 
   <div class="card">
@@ -97,6 +104,9 @@
   </div>
 </div>
 
+<div class="service-spacing">
+</div>
+
 <div class="card">
   <div class="card-header" id="headingFour">
     <h5 class="mb-0">
@@ -105,6 +115,7 @@
       </button>
     </h5>
   </div>
+
   <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#accordionExample">
     <div class="card-body">
       Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid.
@@ -113,8 +124,11 @@
 </div>
 </section>
 
-<section class="color-section">
-  <h2 class="hair-color">Hair Coloring</h2>
+<section class="service-section">
+  <div class="section-title">COLORING</div>
+
+  <div class="service-spacing">
+  </div>
 
   <div class="card">
     <div class="card-header" id="headingFive">
@@ -129,6 +143,9 @@
         Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid.
       </div>
     </div>
+  </div>
+
+  <div class="service-spacing">
   </div>
 
   <div class="card">
@@ -146,6 +163,9 @@
     </div>
   </div>
 
+  <div class="service-spacing">
+  </div>
+
   <div class="card">
     <div class="card-header" id="headingSeven">
       <h5 class="mb-0">
@@ -159,6 +179,9 @@
         Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid.
       </div>
     </div>
+  </div>
+
+  <div class="service-spacing">
   </div>
 
   <div class="card">
@@ -176,6 +199,9 @@
     </div>
   </div>
 
+  <div class="service-spacing">
+  </div>
+
   <div class="card">
     <div class="card-header" id="headingNine">
       <h5 class="mb-0">
@@ -190,10 +216,17 @@
       </div>
     </div>
   </div>
+
+  <div class="service-spacing">
+  </div>
+
 </section>
 
-<section class="treatment-section">
-  <h2 class="treatment-title">Treatments</h2>
+<section class="service-section">
+  <div class="section-title">TREATMENTS</div>
+
+  <div class="service-spacing">
+  </div>
 
   <div class="card">
     <div class="card-header" id="headingTen">
@@ -210,6 +243,9 @@
     </div>
   </div>
 
+  <div class="service-spacing">
+  </div>
+
   <div class="card">
     <div class="card-header" id="headingEleven">
       <h5 class="mb-0">
@@ -224,6 +260,10 @@
       </div>
     </div>
   </div>
+
+  <div class="service-spacing">
+  </div>
+  
 </section>
 
 <section class="padding-2">
